tests/ui/rfcs/rfc-3245-refined-impls/attr.stderr
warning: the feature `refine` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/attr.rs:1:12
   |
LL | #![feature(refine)]
   |            ^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `#[refine]` attribute must be put on an associated function or type in a trait implementation
  --> $DIR/attr.rs:41:1
   |
LL | #[refine]
   | ^^^^^^^^^
LL |
LL | fn foo() {}
   | ----------- this item

error: `#[refine]` attribute cannot be put on an item in a trait
  --> $DIR/attr.rs:5:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     fn assoc();
   |     ----------- this trait item
   |
   = note: the attribute is useless because the item does not refine anything

error: `#[refine]` attribute cannot be put on an item in a trait
  --> $DIR/attr.rs:9:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     type Assoc;
   |     ----------- this trait item
   |
   = note: the attribute is useless because the item does not refine anything

error: associated consts cannot be refined
  --> $DIR/attr.rs:13:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     const N: u32;
   |     ------------- this associated const

error: `#[refine]` attribute cannot be put on an item in an inherent impl
  --> $DIR/attr.rs:20:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     fn assoc() {}
   |     ------------- this impl item
   |
   = note: the attribute is useless because the item does not refine anything

error: associated consts cannot be refined
  --> $DIR/attr.rs:24:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     const M: u32 = 1;
   |     ----------------- this associated const

error: associated consts cannot be refined
  --> $DIR/attr.rs:30:5
   |
LL |     #[refine]
   |     ^^^^^^^^^
LL |
LL |     const N: u32 = 1;
   |     ----------------- this associated const

error: aborting due to 7 previous errors; 1 warning emitted

